# crimson

./: .gitignore  CMakeLists.txt  README.md  build.py
include/: cn_config.h  cn_list.h  cn_log.h  cn_pool.h  cn_sort.h  cn_str.h  cn_utils.h
src/: cn_list.c  cn_log.c  cn_sort.c  cn_str.c  cn_utils.c  crimson.c
